@@ -1087,7 +1087,7 @@ function page_manager_handler_add_submit(&$form, &$form_state) {
   if (!empty($cache->forms)) {
     // Tell the form to go to the config page.
     drupal_set_message(t('Before this variant can be added, it must be configured. When you are finished, click "Add variant" to add this to your page.'));
-    $form_state['new trail'] = array('handlers', 'configure');
+    $form_state['new trail'] = array('actions', 'configure');
   }
   else {
     // It has no forms at all. Add the variant and go to its first operation.
@@ -1432,9 +1432,48 @@ function page_manager_break_lock_submit(&$form, &$form_state) {
  */
 function page_manager_page_summary(&$form, &$form_state) {
   $page = $form_state['page'];
-  if (isset($form_state['subtask']['admin description'])) {
-    $form['description'] = array(
-      '#value' => '<div class="description">' . $form_state['subtask']['admin description'] . '</div>',
-    );
+
+  $output = '';
+
+  if (isset($form_state['subtask']['admin title'])) {
+    $form_state['title'] = $form_state['subtask']['admin title'];
   }
+  
+  if (isset($form_state['subtask']['admin description'])) {
+    $output .= '<div class="description">' . $form_state['subtask']['admin description'] . '</div>';
+  }
+
+  if (isset($form_state['subtask']['admin path'])) {
+    $path = $form_state['subtask']['admin path'];
+    if (strpos('%', $path) === FALSE) {
+      $path = l($path, $path);
+    }
+
+    $output .= '<div class="path"><span class="label">' . t('Path') . ':</span> <span class="value">' . $path . '</span></div>';
+
+    if (!empty($page->handlers)) {
+      foreach ($page->handler_info as $id => $info) {
+        $handler = $page->handlers[$id];
+        $plugin = page_manager_get_task_handler($handler->handler);
+        $output .= '<div class="handler-summary">';
+
+        $output .= '<div class="handler-title">';
+        $output .= '<span class="label">' . t('Variant') . '</span>: ';
+        $output .= '<span class="value">' .
+        $output .= page_manager_get_handler_title($plugin, $handler, $page->task, $page->subtask_id);
+        $output .= '</span>';
+        $output .= '</div>';
+        
+        $output .= '<div class="handler-summary">';
+        $output .= page_manager_get_handler_summary($plugin, $handler, $page->task, $page->subtask_id);
+        $output .= '</div>';
+
+        $output .= '</div>';
+      }
+    }
+  }
+
+  $form['markup'] = array(
+    '#value' => $output,
+  );
 }
